[package]
name = "debuginfod-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
path-absolutize = "3.1.1"
rayon = "1.8.0"
rpm = { git = "https://github.com/marxin/rpm-rs.git", branch = "symlink-targets" }
walkdir = "2.4.0"
zstd = "0.13.0"
cpio = "0.2.2"
bytesize = "1.3.0"
rocket = "=0.5.0-rc.3"
hex = "0.4.3"
