[package]
name = "debuginfod-rs"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
path-absolutize = "3.1.1"
rayon = "1.8.0"
rpm = { git="https://github.com/rpm-rs/rpm.git" }
walkdir = "2.4.0"
zstd = "0.13.0"
cpio = "0.2.2"
bytesize = "1.3.0"
rocket = "0.5.0"
hex = "0.4.3"
log = "0.4.20"
env_logger = "0.10.0"
libc = "0.2.150"
elf = "0.7.3"
flate2 = "1.0.28"
bzip2 = "0.4.4"
xz2 = "0.1.7"
